--- a/webviews/src/App.css
+++ b/webviews/src/App.css
@@ -5,16 +5,15 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  height: 100%;
 }
 
 h1 {
   text-align: center;
 }
 
+/* Poor man CSS debugger*/
 div {
-  /* border: 1px solid #ccc; */
-  width: 100%;
+  border: 0px solid #ccc;
 }
 
 div .progress-bar {
@@ -23,30 +22,16 @@ div .progress-bar {
   border-radius: 5px;
   transition: width 0.2s ease-in-out;
 }
+
 .form-group {
   margin: 15px;
+  width: 100%;
+    vertical-align: middle;
 }
 
-.form-group label{
+.form-group label {
   padding-left: 5px;
   padding-right: 5px;
-}
-
-.form-group select{
-  padding: 0 30px 0 10px;
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
-  line-height: 30px;
-  height: 30px;
-  min-width: 40px;
-  margin: 0 5px 5px 0;
-}
-
-.install-options {
-  background-color: #f0f0f0;
-  padding: 10px;
-  margin-top: 10px;
-  border-radius: 5px;
 }
 
 button {
@@ -69,4 +54,15 @@ button:disabled {
   color: var(--vscode-button-secondaryForeground);
   cursor: not-allowed; /* Change cursor to 'not-allowed' */
   opacity: 0.6; /* Reduce opacity for a disabled look */
+}
+.progress-status {
+  font-style: italic;
+  margin-bottom: 8px;
+  display: inline-block;
+}
+
+.final-setup-group {
+  align-self: flex-end;
+  margin-top: 20px;
+  margin-right: 15px;
 }
