changing width for smaller screen
Signed-off-by: Athira K M <Athira.K.M@ibm.com>

--- a/webviews/src/App.css
+++ b/webviews/src/App.css
@@ -172,12 +172,13 @@ button:disabled {
 .m-0 {
   margin: 0 !important;
 }
+
 .mb-1 {
   margin-bottom: 0.5rem !important;
 }
 
 .main-description {
-  max-width: 500px;
+  width: 500px;
   font-size: 0.8rem;
   margin-bottom: 10px;
   background-color: var(--vscode-sideBar-background);
@@ -193,8 +194,11 @@ button:disabled {
   line-height: 1.2rem;
   color: var(--vscode-terminal-background);
 }
+
+
 @media (max-width: 767px) {
-  .main-wrapper .form-group-wrapper {
+
+  .main-description, .main-wrapper .form-group-wrapper {
     width: calc(100% - 50px);
   }
 }
