--- a/webviews/src/App.css
+++ b/webviews/src/App.css
@@ -181,12 +181,13 @@ button:disabled {
   width: 500px;
   font-size: 0.8rem;
   margin-bottom: 10px;
+  border: 1px solid var(--vscode-tree-tableColumnsBorder);
   background-color: var(--vscode-sideBar-background);
   /* Background color based on the theme */
-  border-radius: 4px;
+  border-radius: 5px;
   color: var(--vscode-editor-foreground);
   /* Text color based on theme */
-  padding: 10px 14px;
+  padding: 10px;
 }
 
 .main-description>p {
@@ -198,7 +199,8 @@ button:disabled {
 
 @media (max-width: 767px) {
 
-  .main-description, .main-wrapper .form-group-wrapper {
+  .main-description,
+  .main-wrapper .form-group-wrapper {
     width: calc(100% - 50px);
   }
 }
