Added the advanced section, for selecting the tab completion
Signed-off-by: sachinsuresh-s10 <sachinsuresh.s10@ibm.com>

--- a/webviews/src/App.css
+++ b/webviews/src/App.css
@@ -129,7 +129,7 @@ button:disabled {
 .main-wrapper .form-group-wrapper .model-list--label {
   display: flex;
   align-items: center;
-  min-width: 200px;
+  min-width: 230px;
   font-size: 15px;
   font-weight: normal;
 }
@@ -196,10 +196,120 @@ button:disabled {
   color: var(--vscode-terminal-background);
 }
 
+/* Toggle Switch (with label) */
+.switch-toggle-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  margin-bottom: 15px;
+}
 
+.switch-toggle {
+  --width: 130px;
+  --height: 30px;
+  --offset: 0px;
+  --radius: 35px;
+  position: relative;
+  width: var(--width);
+  height: var(--height);
+  padding: var(--offset);
+  background: var(--vscode-welcomePage-tileBackground);
+  border-radius: var(--radius);
+  font-size: 12px;
+  line-height: 1;
+  font-weight: 500;
+  line-height: normal;
+  font-style: normal;
+  margin-left: 5px;
+}
+
+.switch-toggle input[type=checkbox] {
+  cursor: pointer;
+  position: absolute;
+  inset: 0;
+  appearance: none;
+  z-index: 2;
+  outline: none;
+}
+
+.switch-toggle input[type=checkbox]:checked+label.switch-toggle-label:before {
+  translate: 100% 0;
+}
+
+.switch-toggle input[type=checkbox]:checked+label.switch-toggle-label span:nth-child(1) {
+  color: var(--vscode-editor-foreground);
+}
+
+.switch-toggle input[type=checkbox]:checked+label.switch-toggle-label span:nth-child(2) {
+  color: var(--vscode-sideBar-background);
+}
+
+.switch-toggle input[type=checkbox]+label.switch-toggle-label {
+  position: absolute;
+  inset: var(--offset, 0);
+  padding: 5px 0;
+  display: block;
+  user-select: none;
+  pointer-events: none;
+  display: grid;
+  gap: 2px;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  place-items: center;
+}
+
+.switch-toggle input[type=checkbox]+label.switch-toggle-label:before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  inset: 0;
+  background: var(--vscode-terminal-ansiWhite);
+  border-radius: 35px;
+  box-shadow: 0px 10px 20px 0px rgba(16, 39, 68, 0.1);
+  translate: 0 0;
+  transition: translate 250ms cubic-bezier(0.93, 0.26, 0.07, 0.69);
+}
+
+.switch-toggle input[type=checkbox]+label.switch-toggle-label span {
+  position: relative;
+  transition: 200ms linear;
+}
+
+.switch-toggle input[type=checkbox]+label.switch-toggle-label span:nth-child(1) {
+  color: var(--vscode-sideBar-background);
+}
+
+.switch-toggle input[type=checkbox]+label.switch-toggle-label span:nth-child(2) {
+  color: var(--vscode-editor-foreground);
+}
+
+.info-message {
+  width: 500px;
+  font-size: 0.8rem;
+  background-color: var(--vscode-editor-background);
+  color: var(--vscode-editor-foreground);
+  /* padding: 10px 0; */
+  text-align: left;
+  border-radius: 5px;
+  opacity: 0.4;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 12.5px;
+  /* outline: 1px solid red; */
+}
+
+.info-message>p {
+  margin-bottom: 0;
+}
+
+
+/* Don't add CSS below @media query section */
 @media (max-width: 767px) {
 
   .main-description,
+  .info-message,
   .main-wrapper .form-group-wrapper {
     width: calc(100% - 50px);
   }
@@ -210,16 +320,4 @@ button:disabled {
     flex-wrap: wrap;
     gap: 8px 16px;
   }
-}
-
-.info-message {
-  width: 500px;
-  font-size: 0.8rem;
-  background-color: var(--vscode-editor-background);
-  color: var(--vscode-editor-foreground);
-  padding: 10px;
-  text-align: left;
-  border-radius: 5px;
-  margin: 0 auto;
-  opacity: 0.4;
 }
